k8s/ignition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignition
  namespace: smarthouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ignition
  template:
    metadata:
      labels:
        app: ignition
    spec:
      containers:
        - name: ignition
          image: inductiveautomation/ignition:latest
          ports:
            - containerPort: 8088
            - containerPort: 8043
---
apiVersion: v1
kind: Service
metadata:
  name: ignition
  namespace: smarthouse
spec:
  type: NodePort
  selector:
    app: ignition
  ports:
    - name: http
      port: 8088
      targetPort: 8088
      nodePort: 30888
    - name: https
      port: 8043
      targetPort: 8043
      nodePort: 30843
