k8s/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthouse-mqtt-broker
  namespace: smarthouse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: smarthouse-mqtt-broker
  template:
    metadata:
      labels:
        app: smarthouse-mqtt-broker
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
              hostPort: 1883
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
---
apiVersion: v1
kind: Service
metadata:
  name: smarthouse-mqtt-broker
  namespace: smarthouse
spec:
  selector:
    app: smarthouse-mqtt-broker
  ports:
    - port: 1883
      targetPort: 1883
