k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarthouse-db
  namespace: smarthouse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: smarthouse-db
  template:
    metadata:
      labels:
        app: smarthouse-db
    spec:
      containers:
        - name: postgres
          image: postgres:14.5
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          hostPath:
            path: /home/alexkzk/smarthouse/docker/postgresql
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: smarthouse-db
  namespace: smarthouse
spec:
  selector:
    app: smarthouse-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      nodePort: 24870
  type: NodePort
